#34 add g2_flags docs

--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -9,14 +9,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Prepare environment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +29,7 @@
     "# For print\n",
     "\n",
     "import uuid\n",
-    "from IPython.display import display_javascript, display_html, display"
+    "from IPython.display import display_javascript, display_html, display, JSON"
    ]
   },
   {
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,10 +62,27 @@
     "    def _ipython_display_(self):\n",
     "        display_html('<div id=\"{}\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>'.format(self.uuid), raw=True)\n",
     "        display_javascript(\"\"\"\n",
-    "        require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {\n",
-    "        document.getElementById('%s').appendChild(renderjson(%s))\n",
+    "        require([\"https://rawgit.com/caldwell/print/master/print.js\"], function() {\n",
+    "        document.getElementById('%s').appendChild(print(%s))\n",
     "        });\n",
     "        \"\"\" % (self.uuid, self.json_str), raw=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class JsonRendering():\n",
+    "    def __init__(self, json_data):\n",
+    "        if isinstance(json_data, dict):\n",
+    "            self.json = json_data\n",
+    "        elif isinstance(json_data, bytearray):\n",
+    "            self.json = json.dumps(json_data.decode())\n",
+    "        else:\n",
+    "            self.json = json.dumps(json_data)\n",
+    "        JSON(self.json)"
    ]
   },
   {
@@ -77,16 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'senzing_config_json' (str)\n",
+      "Default config already set\n",
+      "Stored 'config_id_bytearray' (bytearray)\n"
+     ]
+    }
+   ],
    "source": [
     "%run senzing-init-config.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.JsonRendering at 0x7f0478a24670>"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "RenderJSON(senzing_config_json)"
+    "data_as_json = json.loads(senzing_config_json)\n",
+    "JsonRendering(data_as_json)"
    ]
   },
   {
@@ -137,7 +178,7 @@
    "source": [
     "### Initialize G2Config\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **module_name:** (str) A short name given to this instance of the G2Config\n",
     "  object.\n",
@@ -186,7 +227,7 @@
    "source": [
     "### save\n",
     "`save()` takes an in-memory handle for an editable configuration document, and exports it as a string through the function parameters.\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
@@ -205,7 +246,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "print(response_bytearray)"
    ]
   },
   {
@@ -214,7 +255,7 @@
    "source": [
     "### load\n",
     "`load()` creates an in-memory handle for an editable configuration document. It does so by loading the config document, provided as an input parameter string.\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_bytearray:** (bytearray) the config data to load into the config handle."
    ]
@@ -233,7 +274,7 @@
     "    print(err)\n",
     "\n",
     "print(\"config handle: \" + str(config_handle))\n",
-    "RenderJSON(config_bytearray)"
+    "print(config_bytearray)"
    ]
   },
   {
@@ -250,7 +291,7 @@
     "### listDataSources\n",
     "\n",
     "`listDataSources()` returns a list of data sources contained in an in-memory handle for an editable configuration document\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
@@ -270,7 +311,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "print(response_bytearray)"
    ]
   },
   {
@@ -280,7 +321,7 @@
     "### addDataSource\n",
     "\n",
     "`addDataSource()` adds a new data source to an in-memory handle for an editable configuration document\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
     "- **datasource_json:** (str) json containing the name of the datasource to be added\n",
@@ -307,7 +348,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "print(response_bytearray)"
    ]
   },
   {
@@ -319,7 +360,7 @@
     "Call G2Config's `listDataSources()` method and pretty-prints results.\n",
     "Notice that the list now contains the newly added datasource_code of \"CUSTOMER\".\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
@@ -339,7 +380,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "print(response_bytearray)"
    ]
   },
   {
@@ -349,7 +390,7 @@
     "### deleteDataSource\n",
     "\n",
     "`deleteDataSource()` removes a data source from an in-memory handle for an editable configuration document\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
     "- **datasource_json:** (str) json containing the name of the datasource to be added"
@@ -443,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
@@ -462,8 +503,9 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
