--- a/notebooks/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -177,11 +177,14 @@
     "    sqlConnection = \"sqlite3://na:na@/var/opt/senzing/sqlite/G2C.db\";\n",
     "}\n",
     "\n",
+    "String senzingLicenseBase64 = System.getenv(\"SENZING_LICENSE_BASE64_ENCODED\");\n",
+    "\n",
     "// Construct the JSON string used for Senzing Engine configuration.\n",
     "\n",
     "String senzingConfigJson = \"{\"\n",
     "   + \"\\\"PIPELINE\\\": {\"\n",
     "   +     \"\\\"CONFIGPATH\\\": \\\"\" + configPath + \"\\\",\"\n",
+    "   +     \"\\\"LICENSESTRINGBASE64\\\": \\\"\" + senzingLicenseBase64 + \"\\\",\"\n",
     "   +     \"\\\"SUPPORTPATH\\\": \\\"\" + supportPath + \"\\\",\"\n",
     "   +     \"\\\"RESOURCEPATH\\\": \\\"\" + resourcePath + \"\\\"\"\n",
     "   + \"},\"\n",
