--- a/notebooks/python/senzing-init-config.ipynb
+++ b/notebooks/python/senzing-init-config.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'senzing_config_json' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "config_path = etc_dir\n",
     "support_path = os.environ.get(\"SENZING_DATA_VERSION_DIR\", data_dir)\n",
@@ -90,6 +98,10 @@
     "    }\n",
     "}\n",
     "\n",
+    "senzing_license_base64 = os.getenv(\"SENZING_LICENSE_BASE64_ENCODED\")\n",
+    "if senzing_license_base64:\n",
+    "    senzing_config_dictionary[\"PIPELINE\"][\"LICENSESTRINGBASE64\"] = senzing_license_base64\n",
+    "        \n",
     "senzing_config_json = json.dumps(senzing_config_dictionary)\n",
     "%store senzing_config_json"
    ]
@@ -218,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
