--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Prepare environment"
    ]
@@ -26,10 +24,10 @@
     "import sys\n",
     "import json\n",
     "\n",
-    "# For print\n",
+    "# For RenderJSON\n",
     "\n",
     "import uuid\n",
-    "from IPython.display import display_javascript, display_html, display, JSON"
+    "from IPython.display import display_javascript, display_html, display"
    ]
   },
   {
@@ -39,7 +37,7 @@
     "### Helper class for JSON rendering\n",
     "\n",
     "A class for pretty-printing JSON.\n",
-    "Not required by Senzing,\n",
+    "Not required by Senzing, \n",
     "but helps visualize JSON."
    ]
   },
@@ -62,10 +60,19 @@
     "    def _ipython_display_(self):\n",
     "        display_html('<div id=\"{}\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>'.format(self.uuid), raw=True)\n",
     "        display_javascript(\"\"\"\n",
-    "        require([\"https://rawgit.com/caldwell/print/master/print.js\"], function() {\n",
-    "        document.getElementById('%s').appendChild(print(%s))\n",
+    "        require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {\n",
+    "        document.getElementById('%s').appendChild(renderjson(%s))\n",
     "        });\n",
     "        \"\"\" % (self.uuid, self.json_str), raw=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### System path\n",
+    "\n",
+    "Update system path."
    ]
   },
   {
@@ -74,15 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class JsonRendering():\n",
-    "    def __init__(self, json_data):\n",
-    "        if isinstance(json_data, dict):\n",
-    "            self.json = json_data\n",
-    "        elif isinstance(json_data, bytearray):\n",
-    "            self.json = json.dumps(json_data.decode())\n",
-    "        else:\n",
-    "            self.json = json.dumps(json_data)\n",
-    "        JSON(self.json)"
+    "python_path = \"{0}/python\".format(\n",
+    "    os.environ.get(\"SENZING_G2_DIR\", \"/opt/senzing/g2\"))\n",
+    "sys.path.append(python_path)"
    ]
   },
   {
@@ -91,7 +92,7 @@
    "source": [
     "### Initialize variables\n",
     "\n",
-    "Create variables used for G2Config."
+    "Create variables used for G2Config and G2ConfigMgr."
    ]
   },
   {
@@ -118,19 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_as_json = json.loads(senzing_config_json)\n",
-    "JsonRendering(data_as_json)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "python_path = \"{0}/python\".format(\n",
-    "    os.environ.get(\"SENZING_G2_DIR\", \"/opt/senzing/g2\"))\n",
-    "sys.path.append(python_path)"
+    "RenderJSON(senzing_config_json)"
    ]
   },
   {
