#36 support jupyter lab

--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -41,10 +41,7 @@
     "import sys\n",
     "import json\n",
     "\n",
-    "# For RenderJSON\n",
-    "\n",
-    "import uuid\n",
-    "from IPython.display import display_javascript, display_html, display"
+    "from IPython.display import JSON"
    ]
   },
   {
@@ -64,23 +61,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RenderJSON():\n",
-    "    def __init__(self, json_data):\n",
-    "        if isinstance(json_data, dict):\n",
-    "            self.json_str = json.dumps(json_data)\n",
-    "        elif isinstance(json_data, bytearray):\n",
-    "            self.json_str = json_data.decode()\n",
-    "        else:\n",
-    "            self.json_str = json_data\n",
-    "        self.uuid = str(uuid.uuid4())\n",
-    "\n",
-    "    def _ipython_display_(self):\n",
-    "        display_html('<div id=\"{}\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>'.format(self.uuid), raw=True)\n",
-    "        display_javascript(\"\"\"\n",
-    "        require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {\n",
-    "        document.getElementById('%s').appendChild(renderjson(%s))\n",
-    "        });\n",
-    "        \"\"\" % (self.uuid, self.json_str), raw=True)"
+    "def as_dict(json_data):\n",
+    "    if isinstance(json_data, dict):\n",
+    "        return an_object\n",
+    "    elif isinstance(json_data, bytearray):\n",
+    "        return json.loads(json_data.decode())\n",
+    "    elif isinstance(json_data, bytes):\n",
+    "        return json.loads(json_data.decode())\n",
+    "    elif isinstance(json_data, str):\n",
+    "        return json.loads(json_data)\n",
+    "    return {}"
    ]
   },
   {
@@ -139,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RenderJSON(senzing_config_json)"
+    "JSON(as_dict(senzing_config_json))"
    ]
   },
   {
@@ -179,9 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "g2_engine = G2Engine()\n",
@@ -362,7 +350,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -392,7 +380,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -483,7 +471,7 @@
     "    \n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -681,7 +669,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -837,7 +825,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -905,7 +893,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -990,7 +978,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1066,7 +1054,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1125,7 +1113,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1184,7 +1172,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1243,7 +1231,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1303,7 +1291,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1327,7 +1315,7 @@
    "outputs": [],
    "source": [
     "return_code = g2_engine.countRedoRecords()\n",
-    "RenderJSON(return_code)"
+    "print(return_code)"
    ]
   },
   {
@@ -1368,7 +1356,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "    \n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1400,7 +1388,7 @@
     "    except G2Exception as err:\n",
     "        print(err)\n",
     "\n",
-    "RenderJSON(process_response_bytearray)"
+    "JSON(as_dict(process_response_bytearray))"
    ]
   },
   {
@@ -1454,7 +1442,7 @@
     "\n",
     "    except G2Exception as err:\n",
     "        print(err)\n",
-    "RenderJSON(response)"
+    "JSON(as_dict(response))"
    ]
   },
   {
@@ -1489,7 +1477,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "    \n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1531,11 +1519,11 @@
     "\n",
     "# Pretty-print XML.\n",
     "\n",
-    "RenderJSON(response_bytearray)\n",
+    "#JSON(as_dict(response_bytearray))\n",
     "\n",
     "# Pretty-print JSON\n",
     "\n",
-    "RenderJSON(info_bytearray)"
+    "JSON(as_dict(info_bytearray))"
    ]
   },
   {
@@ -1568,9 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -1620,7 +1606,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1728,7 +1714,7 @@
     "    input_record = response_bytearray.decode()\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1785,7 +1771,7 @@
     "    \n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1832,7 +1818,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1869,7 +1855,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1900,7 +1886,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -1945,7 +1931,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2098,7 +2084,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2131,7 +2117,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2184,7 +2170,7 @@
     "    print(err)\n",
     "# Print the results.\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2246,7 +2232,7 @@
     "    print(err)\n",
     "# Print the results.\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2316,7 +2302,7 @@
     "    print(err)\n",
     "# Print the results.\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2390,7 +2376,7 @@
     "    print(err)\n",
     "# Print the results.\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2467,7 +2453,7 @@
     "    print(err)\n",
     "# Print the results.\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2541,7 +2527,7 @@
     "    print(err)\n",
     "# Print the results.\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2643,7 +2629,7 @@
     "    print(err)\n",
     "# Print the results.\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2713,7 +2699,7 @@
     "    print(err)\n",
     "# Print the results.\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2867,7 +2853,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray.decode())"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2908,7 +2894,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2940,7 +2926,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -2975,7 +2961,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -3077,7 +3063,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
-    "RenderJSON(response_bytearray.decode())"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -3124,7 +3110,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### fetchNext\n",
     "\n",
@@ -3143,7 +3131,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -3305,7 +3295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
@@ -3327,5 +3317,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
