--- a/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -24,10 +24,7 @@
     "import sys\n",
     "import json\n",
     "\n",
-    "# For RenderJSON\n",
-    "\n",
-    "import uuid\n",
-    "from IPython.display import display_javascript, display_html, display"
+    "from IPython.display import JSON"
    ]
   },
   {
@@ -47,23 +44,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RenderJSON():\n",
-    "    def __init__(self, json_data):\n",
-    "        if isinstance(json_data, dict):\n",
-    "            self.json_str = json.dumps(json_data)\n",
-    "        elif isinstance(json_data, bytearray):\n",
-    "            self.json_str = json_data.decode()\n",
-    "        else:\n",
-    "            self.json_str = json_data\n",
-    "        self.uuid = str(uuid.uuid4())\n",
-    "\n",
-    "    def _ipython_display_(self):\n",
-    "        display_html('<div id=\"{}\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>'.format(self.uuid), raw=True)\n",
-    "        display_javascript(\"\"\"\n",
-    "        require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {\n",
-    "        document.getElementById('%s').appendChild(renderjson(%s))\n",
-    "        });\n",
-    "        \"\"\" % (self.uuid, self.json_str), raw=True)"
+    "def as_dict(json_data):\n",
+    "    if isinstance(json_data, dict):\n",
+    "        return an_object\n",
+    "    elif isinstance(json_data, bytearray):\n",
+    "        return json.loads(json_data.decode())\n",
+    "    elif isinstance(json_data, bytes):\n",
+    "        return json.loads(json_data.decode())\n",
+    "    elif isinstance(json_data, str):\n",
+    "        return json.loads(json_data)\n",
+    "    return {}"
    ]
   },
   {
@@ -119,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RenderJSON(senzing_config_json)"
+    "JSON(as_dict(senzing_config_json))"
    ]
   },
   {
@@ -158,7 +148,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -278,7 +268,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -311,7 +301,7 @@
     "except G2Exception as err:\n",
     "    print(err)\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "JSON(as_dict(response_bytearray))"
    ]
   },
   {
@@ -380,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_config_id_bytearray = 17332833\n",
+    "new_config_id_bytearray = config_id_bytearray.decode()\n",
     "try:\n",
     "    g2_configuration_manager.replaceDefaultConfigID(\n",
     "            config_id_bytearray,\n",
@@ -456,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
@@ -473,5 +463,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
