#36 add jupyter lab support

--- a/notebooks/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# G2ConfigMgr"
+    "# G2ConfigMgr\n",
+    "\n",
+    "**If you wish to run this or any of our other java Jupyter Notebooks navigate to \"Help\" -> \"Launch Classic Notebook\"**"
    ]
   },
   {
@@ -610,5 +612,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
