--- a/notebooks/java/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Config-sdk-api-specification.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# G2Config Reference"
+    "# G2Config Reference\n",
+    "\n",
+    "**If you wish to run this or any of our other java Jupyter Notebooks navigate to \"Help\" -> \"Launch Classic Notebook\"**"
    ]
   },
   {
