--- a/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# G2Engine Reference"
+    "# G2Engine Reference\n",
+    "\n",
+    "**If you wish to run this or any of our other java Jupyter Notebooks navigate to \"Help\" -> \"Launch Classic Notebook\"**"
    ]
   },
   {
@@ -1581,9 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "String dataSourceCode = \"TEST\";\n",
@@ -2098,9 +2098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "int maxDegree = 4;\n",
@@ -2844,5 +2842,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
