#36 add messae to swtich to notebooks

--- a/notebooks/java/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Config-sdk-api-specification.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# G2Config Reference\n",
     "\n",
-    "**If you wish to run this or any of our other java Jupyter Notebooks navigate to \"Help\" -> \"Launch Classic Notebook\"**"
+    "**!! If you wish to run any of Senzing's Java notebooks navigate to \"Help\" -> \"Launch Classic Notebook\" !!**"
    ]
   },
   {
